feat: add mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,6 @@ a {
 	width: 48px;
 	height: 48px;
 	padding: 0;
-
 }
 
 .btn:hover {
@@ -186,6 +185,13 @@ a {
 	max-width: 1148px;
 	width: 100%;
 	margin: 0 auto;
+}
+
+@media (max-width: 991.98px) {
+	.container {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
 
 .flex {
@@ -252,7 +258,6 @@ a {
 	transform: translateX(0);
 }
 
-
 .mobile__menu--bottom .navigation {
 	flex-direction: column;
 	text-transform: uppercase;
@@ -263,21 +268,34 @@ a {
 
 .mobile__menu--bottom .navigation__link {
 	font-size: 28px;
-
 }
 
-.btn__mobile {
+@media (max-width: 575.98px) {
+}
 
+@media (max-width: 767.98px) {
+}
+
+@media (max-width: 991.98px) {
+	.header .navigation {
+		display: none;
+	}
+	.header .btn__mobile {
+		display: flex;
+	}
+}
+
+@media (max-width: 1199.98px) {
 }
 
 /* #endregion mobile menu */
 
-
 /* #region hero */
 .hero {
-	overflow: hidden;
+	position: relative;
 	padding-top: 42px;
 	padding-bottom: 21px;
+	overflow: hidden;
 }
 
 .hero .icon-ribbon {
@@ -399,6 +417,88 @@ a {
 	right: -200px;
 	z-index: 0;
 }
+
+@media (max-width: 991.98px) {
+	.hero {
+		padding-bottom: 172px;
+	}
+	.hero__wrapper {
+		flex-direction: column;
+	}
+	.hero .hero__left {
+		position: initial;
+	}
+
+	.hero__left--text {
+		padding-top: 0;
+		text-align: center;
+	}
+
+	.hero__left--text .icon-ribbon {
+		display: none;
+	}
+
+	.hero__left .hero__left--bg {
+		left: -410%;
+	}
+
+	.hero__left--stats {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		max-width: 312px;
+		margin: 0 auto;
+	}
+
+	.hero__left .stats__list {
+		gap: 32px;
+	}
+
+	.stats__list .h2 {
+		font-size: 32px;
+	}
+
+	.stats__list .text {
+		font-size: 14px;
+	}
+
+	.hero__right {
+		padding: 10%;
+	}
+
+	.hero__right {
+		padding: 25px 16px 33px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		max-width: 335px;
+		margin-top: 16px;
+	}
+	.hero__right .hero__person-img {
+		display: none;
+	}
+}
+
+@media (max-width: 767.98px) {
+	.hero__right .hero__form {
+		max-width: 303px;
+		padding: 16px;
+	}
+
+	.hero__left--stats {
+		max-width: 272px;
+	}
+
+	.stats__list .h2 {
+		font-size: 27px;
+	}
+
+	.stats__list .text {
+		font-size: 12px;
+	}
+}
+
 /* #endregion hero */
 
 /* #region about */
@@ -452,6 +552,40 @@ a {
 .about__right .text {
 	color: var(--color-shade-600);
 	text-align: center;
+}
+
+@media (max-width: 991.98px) {
+	.about .about__wrapper {
+		flex-direction: column;
+		align-items: center;
+		gap: 16px;
+	}
+	.about__left {
+		gap: 16px;
+	}
+
+	.about__left .about__left--item {
+		flex-direction: column;
+		max-height: 100%;
+		padding: 40px 35px;
+		gap: 30px;
+		max-width: 334px;
+	}
+
+	.about .about__right {
+		padding: 32px 38px;
+		margin-left: 0;
+		max-width: 334px;
+		gap: 12px;
+	}
+
+	.about .h5 {
+		font-size: 13.5px;
+		margin-top: 23px;
+	}
+	.about .text {
+		font-size: 12px;
+	}
 }
 
 /* #endregion about */
@@ -510,6 +644,101 @@ a {
 .benefits__item .text {
 	align-self: self-start;
 }
+
+.benefits__mobile {
+	display: none;
+}
+
+.benefits__mobile .btn {
+	max-width: 141px;
+	font-size: 12px;
+	height: 48px;
+	margin: 0 auto;
+}
+
+.benefits__mobile .dots {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 4px;
+	margin-bottom: 16px;
+}
+
+.dots .dot {
+	cursor: pointer;
+	height: 5px;
+	width: 5px;
+	background-color: #e3ede3;
+	transition: background-color 0.2s ease;
+	border-radius: 50%;
+}
+
+.dots .dot.active,
+.dots .dot:hover {
+	background-color: #21a038;
+}
+
+@media (max-width: 991.98px) {
+	.benefits {
+		background: linear-gradient(
+			to bottom,
+			var(--color-shade-200) 63%,
+			var(--color-shade-600) 63%
+		);
+		padding-bottom: 48px;
+	}
+
+	.benefits__heading {
+		justify-content: center;
+		padding-top: 23px;
+	}
+
+	.benefits__heading .h2 {
+		font-size: 27px;
+	}
+
+	.benefits__heading .btn {
+		display: none;
+	}
+
+	.benefits__items {
+		justify-content: center;
+	}
+
+	.benefits__mobile {
+		display: flex;
+		flex-direction: column;
+		margin-top: 16px;
+	}
+
+	.benefits__item {
+		opacity: 0;
+		display: none;
+		transition: opacity 0.5s ease-in-out;
+		max-width: 226px;
+		height: auto;
+	}
+
+	.benefits__item.active {
+		opacity: 1;
+		display: flex;
+	}
+
+	.benefits__item .benefits__item--img {
+		border-radius: 24px;
+		padding: 1rem;
+		height: 192px;
+	}
+
+	.benefits__item .h5 {
+		font-size: 13.5px;
+	}
+
+	.benefits__item .text {
+		font-size: 12px;
+	}
+}
+
 /* #endregion benefits */
 
 /* #region calc */
@@ -518,7 +747,7 @@ a {
 	padding-bottom: 48px;
 }
 
-.calc-wrapper {
+.calc__wrapper {
 	gap: 28px;
 }
 
@@ -559,20 +788,19 @@ a {
 }
 
 .calc__profit {
+	display: flex;
+	flex-direction: column;
 	max-width: 660px;
 	width: 100%;
+	gap: 12px;
 }
 .calc__profit .h2 {
 	text-align: center;
-	margin-bottom: 12px;
 }
 .profit__slider {
 	background-color: var(--color-shade-200);
 	border-radius: 65px;
 	padding: 35px 52px;
-}
-.profit__slider + .profit__slider {
-	margin-top: 12px;
 }
 
 .profit__slider--sum {
@@ -601,6 +829,7 @@ a {
 	background-color: var(--color-shade-500);
 	border-radius: 50px;
 }
+
 /* Chrome, Safari, Edge */
 input[type='range']::-webkit-slider-thumb {
 	-webkit-appearance: none;
@@ -634,13 +863,56 @@ input[type='range'] {
 	background-repeat: no-repeat;
 }
 
-/* custom range slider */
+/* end custom range slider */
+
+@media (max-width: 991.98px) {
+	.calc__profit {
+		gap: 24px;
+	}
+
+	.calc .calc__wrapper {
+		flex-direction: column;
+	}
+
+	.calc__wrapper .calc__info {
+		order: 2;
+	}
+
+	.calc__profit .h2,
+	.calc__info .h2 {
+		font-size: 27px;
+	}
+
+	.calc__profit .h5 {
+		font-size: 13.5px;
+	}
+
+	.calc__profit .text,
+	.profit__slider--bottom span,
+	.calc__info .text {
+		font-size: 12px;
+	}
+
+	.calc__info .h1 {
+		font-size: 38px;
+	}
+
+	.calc__info .btn {
+		font-size: 12px;
+		height: 48px;
+	}
+}
+
+@media (max-width: 575.98px) {
+	.profit__slider--bottom span:nth-child(2),
+	.profit__slider--bottom span:nth-child(3) {
+		display: none;
+	}
+}
+
 /* #endregion calc */
 
 /* #region footer */
-.footer {
-}
-
 .footer > .container {
 	border-top: 1px solid var(--color-shade-300);
 }
@@ -660,15 +932,54 @@ input[type='range'] {
 }
 
 .footer__copyright--content {
+	overflow: hidden;
 	text-align: center;
 	gap: 29px;
 }
 .footer__copyright .text {
 	max-width: 822px;
 	width: 100%;
+	position: relative;
 }
-.footer__copyright--content .text.border {
-	border-bottom: 1px solid var(--color-shade-300);
-	padding-bottom: 29px;
+.footer .footer__hr {
+	height: 1px;
+	width: 100%;
+	border: none;
+	background: var(--color-shade-300);
+}
+
+@media (max-width: 991.98px) {
+	.footer__navigation {
+		flex-direction: column;
+		gap: 12px;
+		padding-top: 24px;
+		padding-bottom: 24px;
+	}
+
+	.footer__copyright {
+		padding-bottom: 69px;
+	}
+
+	.footer__copyright--content {
+		gap: 12px;
+	}
+	.footer__copyright--content .text.border {
+		padding-bottom: 12px;
+	}
+	
+	.footer__copyright--content .text br {
+		display: none;
+	}
+
+	.footer__navigation .navigation__link,
+	.footer__copyright--content .text {
+		font-size: 12px;
+	}
+
+	@media (max-width: 575.98px) {
+		.footer__copyright--content .text {
+			max-width: 322px;
+		}
+	}
 }
 /* #endregion footer */
